--- a/lotus-foundation/API/API.csproj
+++ b/lotus-foundation/API/API.csproj
@@ -18,4 +18,8 @@
     <Folder Include="Configurations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
+  </ItemGroup>
+
 </Project>
