--- a/lotus-foundation/Application/Application.csproj
+++ b/lotus-foundation/Application/Application.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infraestructure\Infraestructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Events\" />
     <Folder Include="Meetings\" />
-    <Folder Include="Members\" />
     <Folder Include="Notifications\" />
   </ItemGroup>
 
