--- a/lotus-foundation/Infraestructure/Infraestructure.csproj
+++ b/lotus-foundation/Infraestructure/Infraestructure.csproj
@@ -12,4 +12,12 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
