--- a/lotus-foundation/Application/Application.csproj
+++ b/lotus-foundation/Application/Application.csproj
@@ -8,13 +8,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Infraestructure\Infraestructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Events\" />
     <Folder Include="Meetings\" />
+    <Folder Include="Members\" />
     <Folder Include="Notifications\" />
+    <Folder Include="Queries\CreateMember\" />
   </ItemGroup>
 
 </Project>
