--- a/lotus-foundation/Infraestructure/Infraestructure.csproj
+++ b/lotus-foundation/Infraestructure/Infraestructure.csproj
@@ -8,11 +8,12 @@
 
   <ItemGroup>
     <Folder Include="Configurations\" />
-    <Folder Include="Persistence\Mongo\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
   </ItemGroup>
 
