--- a/lotus-foundation/Application/Application.csproj
+++ b/lotus-foundation/Application/Application.csproj
@@ -11,11 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Commands\CreateMember\" />
     <Folder Include="Events\" />
     <Folder Include="Meetings\" />
-    <Folder Include="Members\" />
     <Folder Include="Notifications\" />
-    <Folder Include="Queries\CreateMember\" />
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
